[tool.poetry]
name = "matrix"
version = "0.1.0"
description = ""
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
readme = "ReadMe.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0.post0"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".ipynb_checkpoints",
    "poetry.lock",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
